test/error/badMatch.dck
%-

(:def main
  (:match ("Hello", "World") 
    [(t, t) t]))
